manage my account removed

--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -19,9 +19,9 @@
             <li class="active" ng-click="closeFilter()"><a data-toggle="pill" href="#/manage/jobsites">
               <i class="fa fa-map-marker my-verti-icon"></i>
               <span class="sidebar-heading">Manage Job Sites</span></a></li>
-            <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage-my-account">
+            <!-- <li ng-click="closeFilter()"><a data-toggle="pill" href="/#/manage-my-account">
               <i class="fa fa-user my-verti-icon"></i>
-              <span class="sidebar-heading">Manage My Account</span></a></li>
+              <span class="sidebar-heading">Manage My Account</span></a></li> -->
             <li ng-click="closeFilter()"><a data-toggle="pill" href="#/quota-n-reservations">
               <i class="fa fa-bookmark my-verti-icon"></i>
               <span class="sidebar-heading">Quotes &amp;
