--- a/src/app/quota-n-reservations/quota-n-reservations.html
+++ b/src/app/quota-n-reservations/quota-n-reservations.html
@@ -69,7 +69,7 @@
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
-			                <td></td>
+			                <td>Site 1</td>
 			                <td>$928.96</td>
 			                <td class="text-right">
 			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
@@ -78,7 +78,7 @@
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
-			                <td></td>
+			                <td>Site 1</td>
 			                <td>$928.96</td>
 			                <td class="text-right">
 			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
@@ -87,7 +87,7 @@
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
-			                <td></td>
+			                <td>Site 1</td>
 			                <td>$928.96</td>
 			                <td class="text-right">
 			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
@@ -96,7 +96,7 @@
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
-			                <td></td>
+			                <td>Site 1</td>
 			                <td>$928.96</td>
 			                <td class="text-right">
 			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
@@ -105,7 +105,7 @@
 			              <tr>
 			                <td><a href="" class="invoice-no">49345</a></td>
 			                <td>May 21, 2015</td>
-			                <td></td>
+			                <td>Site 1</td>
 			                <td>$928.96</td>
 			                <td class="text-right">
 			                  <a href="#/quotes-detail" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
