about us link and faq page

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -81,18 +81,8 @@
           <div class="dont-see-div">
             <a href="/#/help" class="help-link">Don't see what you need?</a>
             <div class="btn-group drop-btn profile-dropdown user-div visible-xs visible-sm" dropdown>
-              <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn about-caret nomargin nopadding" id="single-button" dropdown-toggle>About &nbsp
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu list-group user-list-group arrow_box about-dropdown"  role="menu">
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Team</a></li>
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Board of Directors</a></li>
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">FAQ</a></li>
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Press Releases</a></li>
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Financial Reports</a></li>
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">2015 Annual Meeting</a></li>
-                <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Contact Us</a></li>
-              </ul>
+              <a class="help-link nomargin nopadding" href="#/FAQ">About
+              </a>
           </div>
           </div>
         </form>
@@ -132,18 +122,7 @@
         </div>
 
         <div class="btn-group drop-btn profile-dropdown user-div" dropdown>
-            <button class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn about-caret" id="single-button" dropdown-toggle>About &nbsp
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu list-group user-list-group arrow_box about-dropdown"  role="menu">
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Team</a></li>
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Board of Directors</a></li>
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">FAQ</a></li>
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Press Releases</a></li>
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Financial Reports</a></li>
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">2015 Annual Meeting</a></li>
-              <li role="presentation" class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Contact Us</a></li>
-            </ul>
+            <a href="#/FAQ" class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn about-caret">About</a>
         </div>
         <!-- <div class="btn-group drop-btn user-div" ng-if="userObj">
           <div>
