--- a/src/app/faq/faq.html
+++ b/src/app/faq/faq.html
@@ -9,46 +9,181 @@
 			<a href="#" class="btn sell-equ all-btn">Team</a>
 			<a href="#" class="btn sell-equ all-btn">Board of Directors</a>
 			<a href="#/FAQ" class="btn sell-equ all-btn">FAQ</a>
-			<a href="#" class="btn sell-equ all-btn">Press Releases</a>
-			<a href="#" class="btn sell-equ all-btn">Financial Reports</a>
-			<a href="#" class="btn sell-equ all-btn">2015 Annual Meeting</a>
-			<a href="#" class="btn sell-equ all-btn">Contact Us</a>
+			<a href="#/press-releases" class="btn sell-equ all-btn">Press Releases</a>
+			<a href="#/financial-reports" class="btn sell-equ all-btn">Financial Reports</a>
+			<a href="#/annual-meeting" class="btn sell-equ all-btn">2015 Annual Meeting</a>
+			<a href="#/contact-us" class="btn sell-equ all-btn">Contact Us</a>
 		</div>
 		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col">
-			<p class="desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p class="desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p class="desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p class="desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<uib-accordion close-others="oneAtATime" class="faq-accordion">
+		    <uib-accordion-group>
+		      <uib-accordion-heading>
+		      	<h4 class="heading-text">
+		        	What does Noble Iron Offer?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		      	</h4>
+		      </uib-accordion-heading>
+		      <p class="desc-text">
+		      	Noble Iron specializes in construction equipment rentals, sales and service. We offer new and used equipment for sale from some of the largest equipment manufacturers in the world, including Terex, Genie, JLG, Liugong, Allied and others.  We can also help you sell or dispose your used equipment. For questions and to learn more about these services contact us at 1-855-767-4424.
+		      </p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		      <uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Where does Noble Iron offer its rental equipment?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+		      <p class="desc-text">
+		      	Noble Iron rents equipment in Southern California and Houston, Texas. Don't see what you need? Give us a call at 1-855-767-4424 and we will be happy to help you.
+		      </p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		      <uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	What are Noble Iron's business hours?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+		      <p class="desc-text">
+		      	Our customer service is available:
+		      </p>
+					<p class="desc-text">
+						Monday - Friday: 6AM-5PM PST
+					</p>
+					<p class="desc-text">
+						Saturday - Sunday: Closed
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		      <uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Does Noble Iron offer a same day delivery?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+		      <p class="desc-text">
+		      	Yes, we try to fulfill expedited orders. Execution of these will be dependent upon equipment and driver availability.  Extra charges may apply.  For same day requests, please call us at 1-855-767-4424 or email us at customercare@nobleiron.com
+		      </p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		      <uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	How do I cancel my order? Can I set up auto termination?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+		      <p class="desc-text">
+		      	To cancel, you can call us over the phone at 1-855-767-4424, or email us at customercare@nobleiron.com. You will know your request is complete upon receiving a termination confirmation number.
+		      </p>
+					<p class="desc-text">
+						At this time, we do not offer auto-terminations on rentals. You must complete one of the above steps to cancel you rental. Your unit(s) will stay on rent until you contact us and receive a termination confirmation number.
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Do you guarantee delivery time?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						We strive to have your delivery done on time every time. Delivery times are subject to traffic & weather conditions.
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	How Long is each rental period?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						However long you decid to keep the unit. We have price breaks for weekly and monthly rentals. You must request a termination to end your rental period. 
+					</p>
+					<ul class="desc-text">
+						<li><p>One Day Rental = One (1) 8-hour shift over a 24 hour period</p></li>
+						<li><p>One Week Rental = Five (5) 8-hour shifts over a seven day period</p></li>
+						<li><p>One Month Rental = Twenty (20) 8-hour shifts over a 28 day period</p></li>
+					</ul>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	If my rental equipment is dropped off at 10 AM for a one day rental, how long do I have to use the equipment?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						Till 10 am the next morning, or 8 hours of use per day; whichever comes first. Please make sure to request for your order to be terminated once you are done using it. You must call us to request a termination number, if you do not notify us the rental will stay open and you will continue to get billed for the outstanding equipment.
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	When will my equipment be picked up?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						Your equipment will be picked up 24-48 hours from the time of termination request. You must request termination to start this process. We will provide you a termination confirmation number once your request is processed. At this time, Noble Iron does not offer automatic terminations.
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Is the rental price listed on the website the total price?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						 No. The listed rental price does not include pickup and delivery charges or required taxes and service fees. The Damage Waiver is also additional.
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Is fuel included?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						No. The equipment is delivered with a full fuel tank. If refueling is necessary, it is your responsibility to refuel the equipment, otherwise you will be charged a refueling fee. 
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Am I responsible for damages?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						In most cases, yes. Incidental damage may be covered by the Damage Waiver. For complete details on our rental policies, please refer to the Terms & Conditions outlined in the provided Rental Agreement or give us a call at 1-855-767-4424.   
+					</p>
+		    </uib-accordion-group>
+		    <uib-accordion-group>
+		    	<uib-accordion-heading>
+		        <h4 class="heading-text">
+		        	Can I pick-up or drop off the equipment myself?
+		        	<i class="fa fa-chevron-right pull-right"></i>
+		        </h4>
+		      </uib-accordion-heading>
+					<p class="desc-text">
+						For your safety and convenince, our haulers must be used for all equipment deliveries and pick-ups. In some cases, we allow for will-call orders.  You must call us at 1-855-767-4424 or email us at customercare@nobleiron.com and we will be happy to process your request.   
+					</p>
+		    </uib-accordion-group>
+		  </uib-accordion>
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
 			<ul class="list-group user-list-group about-dropdown">
 					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Team</a></li>
 					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Board of Directors</a></li>
-					<li class="list-group-item noborder active-about"><a class="nopadding" role="menuitem" tabindex="-1" href="#">FAQ</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Press Releases</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Financial Reports</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">2015 Annual Meeting</a></li>
-					<li class="list-group-item noborder"><a class="nopadding" role="menuitem" tabindex="-1" href="#">Contact Us</a></li>
+					<li class="list-group-item noborder active-about" ui-sref="hm.faq"><a class="nopadding" role="menuitem" tabindex="-1" href="#">FAQ</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.pressReleases"><a class="nopadding" role="menuitem" tabindex="-1" href="#/press-releases">Press Releases</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.financialReports"><a class="nopadding" role="menuitem" tabindex="-1" href="#/financial-reports">Financial Reports</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.annualMeeting"><a class="nopadding" role="menuitem" tabindex="-1" href="#/annual-meeting">2015 Annual Meeting</a></li>
+					<li class="list-group-item noborder" ui-sref="hm.contactUs"><a class="nopadding" role="menuitem" tabindex="-1" href="#/contact-us">Contact Us</a></li>
       </ul>
 		</div>
 	</div>
