--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -121,7 +121,7 @@
           </ul>
         </div>
 
-        <div class="btn-group drop-btn profile-dropdown user-div" dropdown>
+        <div class="btn-group drop-btn profile-dropdown user-div">
             <a href="#/FAQ" class="btn btn-mini dropdown-toggle my-alc-btn-toggle prof-btn about-caret">About</a>
         </div>
         <!-- <div class="btn-group drop-btn user-div" ng-if="userObj">
