--- a/src/app/manage-jobsites/manage-jobsites.html
+++ b/src/app/manage-jobsites/manage-jobsites.html
@@ -84,7 +84,7 @@
                         <td class="text-right">
                           <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
                           <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td><a href="" class="invoice-no">49345</a></td>
@@ -92,7 +92,7 @@
                         <td class="text-right">
                           <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
                           <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td><a href="" class="invoice-no">49345</a></td>
@@ -100,7 +100,7 @@
                         <td class="text-right">
                           <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
                           <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td><a href="" class="invoice-no">49345</a></td>
@@ -108,7 +108,7 @@
                         <td class="text-right">
                           <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
                           <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
                       </tr>
                       <tr>
                         <td><a href="" class="invoice-no">49345</a></td>
@@ -116,7 +116,7 @@
                         <td class="text-right">
                           <a href="#" class="invoice-no view-down"><i class="fa fa-eye invoice-no heading-text"></i></a>
                           <a href="#/add-job" class="invoice-no view-down"><i class="fa fa-pencil-square-o invoice-no heading-text"></i></a>
-                          <a href="#" class="invoice-no view-down"><i class="fa fa-download invoice-no heading-text"></i></a></td>
+                          <a href="#" class="invoice-no view-down"><i class="fa fa-trash invoice-no heading-text"></i></a></td>
                       </tr>
                     </tbody>
                   </table>
