--- a/src/app/contact-us/contact-us.html
+++ b/src/app/contact-us/contact-us.html
@@ -4,7 +4,7 @@
 			<h3 class="heading-text">Contact Us</h3>
 		</div>
 	</div>
-	<div class="row contact-row">
+	<div class="row about-row">
 		<div class="col-xs-12 visible-xs heading-border about-fields-small">
 			<a href="#" class="btn sell-equ all-btn">Team</a>
 			<a href="#" class="btn sell-equ all-btn">Board of Directors</a>
@@ -14,13 +14,14 @@
 			<a href="#/annual-meeting" class="btn sell-equ all-btn">2015 Annual Meeting</a>
 			<a href="#/contact-us" class="btn sell-equ all-btn">Contact Us</a>
 		</div>
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
+		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col contact-us-col toppadding">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pull-center">
 			<p class="heading-text contact-text">
 				Noble Iron offers equipment for rent, equipment for sale, and software applications for the construction and industrial equipment industry.
 			</p>
 		</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 heading-border numbers-mail">
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center contact-numbers-col">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 pull-center contact-numbers-col">
 				<p class="hidden-xs">
 					<button class="btn sell-equ all-btn bold-font">Equipment Sales and Rental: 1-855-767-4424</button>
 				</p>
@@ -31,7 +32,7 @@
 					<button class="btn sell-equ all-btn bold-font">Texada Software: 1-800-361-1233</button>
 				</p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 pull-center contact-numbers-col">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 pull-center contact-numbers-col">
 				<p>
 					<button class="btn sell-equ all-btn bold-font">Investor Relations: (832) 767-4424</button>
 				</p>
@@ -40,7 +41,6 @@
 				</p>
 			</div>
 		</div>
-		<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 description-col contact-us-col toppadding">
 			<h3 class="heading-text heading-border topmargin talk-heading">Want to talk to us?</h3>
 			<input type="text" placeholder="Full Name" class="form-control">
 			<input type="text" placeholder="Email" class="form-control">
