placholder changes in login page

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -93,7 +93,7 @@
                   </div>
                   <div class="form-group" valdr-form-group>
                     <input type="password" autocomplete="off" name="password" ng-model="loginData.password" ng-required="true"
-                           class="form-control" placeholder="password" >
+                           class="form-control" placeholder="Password">
                   </div>
                   <div class="checkbox">
                     <label class="remem-me"><input type="checkbox" ng-model="loginData.isRememberMe"  ng-true-value="'true'" ng-false-value="'false'"> Remember me</label>
@@ -134,7 +134,7 @@
                   <div class="form-group" valdr-form-group>
 
                     <input type="password" class="form-control" ng-model="UserRegisterData.password" name="password"
-                           placeholder="password" autocomplete="off">
+                           placeholder="Password" autocomplete="off">
                   </div>
 
                   <div class="form-group" valdr-form-group>
