--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -406,8 +406,8 @@ a:focus { color: #0099cc;
 .last_day a{color: #ff0000; font-family: 'Open Sans', sans-serif; font-weight: 500;}
 .manage_job_tit{font-family: 'Open Sans', sans-serif; font-weight: 500; font-size: 16px; color: #666666;}
 .dash_board_tit{font-family: 'Open Sans', sans-serif; font-size: 16px; color: #666666; }
-.dash_board_bold{ font-weight: 500;}
-.dash_board_light{font-weight: 300;}
+.dash_board_bold{ font-weight: 500; font-size: 13px;}
+.dash_board_light{font-weight: 300; font-size: 13px;}
 .bord_dash_bot{border-bottom: 1px solid #d9d9d9;}
 .map_btn_manage{background: #009ddc; color: #fff; padding: 8px 22px;}
 .btn_map_view{background-color: #fff;
